Remove invalid command and remove use of deprecated newInstance to create commands